Update production URLs to passion-os.ecent.online - Updated wrangler.toml with correct AUTH_URL and NEXT_PUBLIC_APP_URL - Updated layout.tsx metadataBase - Updated sitemap.ts default URL - Updated robots.txt sitemap URL - Updated GitHub Actions deploy summary URL

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -32,8 +32,8 @@ database_id = "40c2b3a5-7fa1-492f-bce9-3c30959b56a8"
 # Environment variables (non-sensitive)
 [vars]
 NODE_ENV = "production"
-NEXT_PUBLIC_APP_URL = "https://passion-os-next.jvetere1999.workers.dev"
-AUTH_URL = "https://passion-os-next.jvetere1999.workers.dev"
+NEXT_PUBLIC_APP_URL = "https://passion-os.ecent.online"
+AUTH_URL = "https://passion-os.ecent.online"
 AUTH_TRUST_HOST = "true"
 ADMIN_EMAILS = "jvetere1999@gmail.com"
 NEXT_PUBLIC_ADMIN_EMAILS = "jvetere1999@gmail.com"
