--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,5 +51,5 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **URL:** https://passion-os-next.jvetere1999.workers.dev" >> $GITHUB_STEP_SUMMARY
+          echo "- **URL:** https://passion-os.ecent.online" >> $GITHUB_STEP_SUMMARY
 
