perf: Add performance instrumentation and optimize hot API routes Phase 1-2 implementation: - Add request-context module for timing and memoization - Add createAPIHandler wrapper with Server-Timing headers - Optimize middleware with Set lookup and early bailout - Refactor hot API routes: focus/active, focus/pause, daily-plan, accept-tos - Add baseline measurement scripts (repro.mjs, psi.mjs) - Add PERF.md and SYNC.md documentation - Add FocusStateContext for deduplicating focus polling (not yet wired) - Add unit tests for perf module Instrumentation enabled with x-perf-debug=1 header.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:worker": "npx @opennextjs/cloudflare build",
     "preview": "npm run build && npm run build:worker && wrangler dev",
     "deploy": "npm run build && npm run build:worker && wrangler deploy",
+    "deploy:full": "./scripts/deploy-full.sh",
     "deploy:preview": "npm run deploy -- --env preview",
     "deploy:dry-run": "npm run build && npm run build:worker && wrangler deploy --dry-run",
     "typegen": "wrangler types",
