fix: Docker build context for migrations access
- Build from repo root so app/database/migrations is accessible
- Add build_context to wrangler.toml
- Use Rust 1.84 (stable)

--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,5 +1,7 @@
 # Build stage
-FROM rust:1.88-slim-bookworm AS builder
+# NOTE: This Dockerfile must be built from the REPO ROOT, not app/backend
+# e.g., docker build -f app/backend/Dockerfile .
+FROM rust:1.84-slim-bookworm AS builder
 
 WORKDIR /app
 
@@ -9,9 +11,12 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy manifests
-COPY Cargo.toml Cargo.lock ./
-COPY crates ./crates
+# Recreate the local directory structure so sqlx::migrate! path works
+# Path in state.rs: "../../../database/migrations" (from crates/api/src/)
+# So we need: /app/crates/api/src -> ../../../database/migrations = /app/database/migrations
+COPY app/backend/Cargo.toml app/backend/Cargo.lock ./
+COPY app/backend/crates ./crates
+COPY app/database/migrations ./database/migrations
 
 # Build release binary with reduced parallelism to avoid OOM
 ENV CARGO_BUILD_JOBS=2
