--- a/app/backend/crates/api/Cargo.toml
+++ b/app/backend/crates/api/Cargo.toml
@@ -49,6 +49,7 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 dotenvy.workspace = true
+urlencoding = "2"
 
 # Macros
 paste = "1"
