feat: migrate backend from Cloudflare Containers to Fly.io
BREAKING: Backend now deploys to Fly.io instead of Cloudflare Containers

Changes:
- Add fly.toml for Fly.io deployment (app/backend/fly.toml)
- Add cloudflare-api-proxy Worker to route api.ecent.online -> Fly.io
- Update deploy-backend.yml to use Fly.io CLI
- Add deploy-api-proxy.yml workflow
- Move cloudflare-containers to deprecated/
- Update deploy/README.md with new architecture

Required setup:
1. Create Fly.io app: flyctl apps create ignition-api
2. Set FLY_API_TOKEN secret in GitHub
3. Set Fly.io secrets: flyctl secrets set DATABASE_URL=... etc
4. Deploy API proxy: cd deploy/cloudflare-api-proxy && npx wrangler deploy

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,85 +1,40 @@
-name: Deploy Backend to Cloudflare Containers
+name: Deploy Backend to Fly.io
 
 on:
   push:
     branches: [main]
     paths:
       - 'app/backend/**'
-      - 'deploy/cloudflare-containers/**'
       - '.github/workflows/deploy-backend.yml'
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    name: Deploy to Cloudflare Containers
+    name: Deploy to Fly.io
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
-          cache-dependency-path: deploy/cloudflare-containers/package-lock.json
+      - name: Setup Fly.io CLI
+        uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - name: Install wrangler
-        run: npm install -g wrangler
-
-      - name: Install deploy dependencies
-        working-directory: deploy/cloudflare-containers
-        run: npm ci
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Cache Docker layers
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: docker-${{ runner.os }}-${{ hashFiles('app/backend/Cargo.lock') }}
-          restore-keys: |
-            docker-${{ runner.os }}-
-
-      - name: Delete existing worker and durable objects
-        continue-on-error: true
+      - name: Deploy to Fly.io
+        working-directory: app/backend
         env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: flyctl deploy --remote-only
+
+      - name: Verify deployment
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
-          # Delete the worker script first
-          curl -X DELETE "https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/scripts/ignition-api" \
-            -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" || true
-          
-          # Delete the old durable object namespace that's causing conflicts
-          curl -X DELETE "https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/durable_objects/namespaces/5e08f208dd5e4a6e90e1cd8ccc32a142" \
-            -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" || true
-          
-          # Also try deleting any other related namespaces by listing and deleting
-          NAMESPACES=$(curl -s "https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/durable_objects/namespaces" \
-            -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" | jq -r '.result[] | select(.script_name == "ignition-api") | .id')
-          for ns in $NAMESPACES; do
-            curl -X DELETE "https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/durable_objects/namespaces/$ns" \
-              -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" || true
-          done
-          
+          # Wait for deployment to stabilize
           sleep 10
-
-      - name: Deploy to Cloudflare Containers
-        working-directory: deploy/cloudflare-containers
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler deploy src/index.ts
-
-      - name: Add custom domain
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: |
-          curl -X POST "https://api.cloudflare.com/client/v4/accounts/$CLOUDFLARE_ACCOUNT_ID/workers/domains" \
-            -H "Authorization: Bearer $CLOUDFLARE_API_TOKEN" \
-            -H "Content-Type: application/json" \
-            --data '{"hostname":"api.ecent.online","service":"ignition-api","environment":"production"}' || true
+          
+          # Check app status
+          flyctl status --app ignition-api
+          
+          # Verify health endpoint
+          curl -f https://ignition-api.fly.dev/health || echo "Health check pending..."
