--- a/app/backend/fly.toml
+++ b/app/backend/fly.toml
@@ -13,6 +13,7 @@ primary_region = "iad"
   SERVER_PORT = "8080"
   SERVER_ENVIRONMENT = "production"
   SERVER_PUBLIC_URL = "https://api.ecent.online"
+  SERVER_FRONTEND_URL = "https://ignition.ecent.online"
   AUTH_COOKIE_DOMAIN = "ecent.online"
   AUTH_SESSION_TTL_SECONDS = "2592000"
   AUTH_DEV_BYPASS = "false"
