--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Admin Dependencies
         working-directory: app/admin
-        run: npm ci
+        run: npm install
 
       - name: Build Admin App
         working-directory: app/admin
